// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input cell control className API 1`] = `
<body>
  <div>
    <table>
      <thead>
        <tr>
          <th
            id="labelled-by"
          >
            Column Header
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            aria-labelledby="labelled-by"
            class="unique-class-name"
            role="gridcell"
          >
            <div
              class="container"
              style="height: 100%; position: relative;"
            >
              <input
                aria-describedby="test-id-validation-message "
                class="input"
                id="test-id"
                name="test-name"
                type="text"
                value=""
              />
              <div
                class="container"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`Input cell control has defaults 1`] = `
<body>
  <div>
    <table>
      <thead>
        <tr>
          <th
            id="labelled-by"
          >
            Column Header
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            aria-labelledby="labelled-by"
            class="container"
            role="gridcell"
          >
            <div
              class="container"
              style="height: 100%; position: relative;"
            >
              <input
                aria-describedby="test-id-validation-message "
                class="input"
                id="test-id"
                name="test-name"
                type="text"
                value=""
              />
              <div
                class="container"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`Input cell control has defaults 2`] = `
Object {
  "dirty": false,
  "name": "test-name",
  "value": "",
}
`;

exports[`Input cell control id API is a string 1`] = `
<body>
  <div>
    <table>
      <thead>
        <tr>
          <th
            id="labelled-by"
          >
            Column Header
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            aria-labelledby="labelled-by"
            class="container"
            role="gridcell"
          >
            <div
              class="container"
              style="height: 100%; position: relative;"
            >
              <input
                aria-describedby="unique-id-validation-message "
                class="input"
                id="unique-id"
                name="test-name"
                type="text"
                value=""
              />
              <div
                class="container"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
